# cpp-archetype-simple-cmake-vcode-linux

./: CMakeLists.txt
include/: SimpleClass.hpp
src/: SimpleClass.cpp
test/: CMakeLists.txt  SimpleClassTest.cpp
